# reg-compliance-chatbot

./: .gitignore  README.md  architecture.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  RAGSystem.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_api.ps1  test_api.sh
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPage.tsx  DemoQuestionsPanel.tsx  MessageBubble.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  textarea.tsx
frontend/src/lib/: api-client.ts
